@@ -29,9 +29,10 @@ module Backup
         print "Restoring MySQL database #{config['database']} ... "
         system('mysql', *mysql_args, config['database'], in: db_file_name)
       when "postgresql" then
-        puts "Destructively rebuilding database schema for RAILS_ENV #{Rails.env}"
-        Rake::Task["db:schema:load"].invoke
         print "Restoring PostgreSQL database #{config['database']} ... "
+        # Drop all tables because PostgreSQL DB dumps do not contain DROP TABLE
+        # statements like MySQL.
+        Rake::Task["gitlab:db:drop_all_tables"].invoke
         pg_env
         system('psql', config['database'], '-f', db_file_name)
       end
